--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -376,3 +376,12 @@ series = {ICML'10}
   doi = {10.1103/PhysRev.36.823},
   url = {https://link.aps.org/doi/10.1103/PhysRev.36.823}
 }
+
+@article{CIRprocess,
+  title = {Simulating the CIR and Heston Processes: Matching the First Four Moments},
+  author = {Okhrin, Ostap and Rockinger, Michael and Schmid, Manuel },
+  year = {2021},
+  month = {Jun}
+}
+
+
