--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -381,7 +381,8 @@ series = {ICML'10}
   title = {Simulating the CIR and Heston Processes: Matching the First Four Moments},
   author = {Okhrin, Ostap and Rockinger, Michael and Schmid, Manuel },
   year = {2021},
-  month = {Jun}
+  month = {Jun},
+journal = {unpublished}
 }
 
 
